# graph-bisection

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  main.cpp
src/: CMakeLists.txt  bisection.hpp  bisectionResult.hpp  bisectionUtilities.hpp  combinedBisection.hpp  growingBisection.hpp  iterativeBisection.hpp
test/unit_tests/: CMakeLists.txt  gtest.cpp
